IFCtoRDF Maven Online Libraries in Use
A simplified compilation procedure for the source.